--- a/src/app.pcss
+++ b/src/app.pcss
@@ -77,3 +77,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+.documentList {
+  height: calc(100vh - 120px);
+  overflow: auto;
+}
+
+.documentList>div {
+  overflow: initial !important;
+}
